Fix message field sometimes bleeding out of form

--- a/ExampleSite/styles.css
+++ b/ExampleSite/styles.css
@@ -534,6 +534,11 @@ input {
 .contact-form {
   margin-bottom: 32px;
 }
+
+#message {
+  width: 80%;
+}
+
 footer {
   margin: 24px 0;
 }
